[package]
name = "player-face-api"
version = "0.1.0"
authors = ["Gegy <gegy1000@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.7", features = ["full"] }
warp = "0.3"

reqwest = { version = "0.11", features = ["rustls-tls", "json", "gzip"], default-features = false }
futures = "0.3"

uuid = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
base64 = "0.13"
image = "0.23"

sha1 = "0.6"

lru-cache = "0.1"
governor = { version = "0.3", default-features = false, features = ["std", "dashmap", "jitter"] }

lazy_static = "1.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
